--- a/app/brokers/(2-guides)/how-to-use-chainflip-sdk/page.mdx
+++ b/app/brokers/(2-guides)/how-to-use-chainflip-sdk/page.mdx
@@ -1,9 +1,7 @@
 ---
-
 title: How to use Chainflip SDK
 
 description: The Chainflip SDK provides a simple way for JavaScript/TypeScript developers to interact with the Chainflip protocol.
-
 ---
 
 import { Callout } from "nextra/components";
@@ -20,9 +18,9 @@ The Chainflip Javascript SDK provides a simple way for JavaScript/TypeScript dev
 4. **Get status:** The `getStatus` method provides real-time updates about the status of a swap operation.
 
 <Callout type="info">
-    If you want to learn more about how Chainflip swaps work, check the [Swapping Basics](/protocol/swapping-basics) section
+  If you want to learn more about how Chainflip swaps work, check the [Swapping
+  Basics](/protocol/swapping-basics) section
 </Callout>
-
 
 ## Swap Assets using the SDK
 
@@ -30,16 +28,16 @@ There are two ways to initiate a swap on Chainflip.
 Both options are **fire-and-forget** - once the assets are sent to a deposit channel or the vault swap transaction is submitted, the user doesn't need to do anything for the swap to take place.
 
 1. **Request a deposit address:** The [`requestDepositAddress` method](/brokers/javascript-sdk/functions#request-deposit-address-v2) generates a deposit address on the source chain.
-The user sends funds to this address to initiate a swap.
+   The user sends funds to this address to initiate a swap.
 
 2. **Trigger a vault swap:** The [`encodeVaultSwapData` method](/brokers/javascript-sdk/functions#encode-vault-swap-data) returns an unsigned transaction that encodes the details of the swap.
-The user signs and submits this transaction to initiate the swap.
+   The user signs and submits this transaction to initiate the swap.
 
 <Callout type="info">
-    Check [How Swapping Works](/protocol/how-swapping-works) and [Swapping Basics](/protocol/swapping-basics) for more information about how Chainflip swaps work.
+  Check [How Swapping Works](/protocol/how-swapping-works) and [Swapping
+  Basics](/protocol/swapping-basics) for more information about how Chainflip
+  swaps work.
 </Callout>
-
-
 
 ## Installation
 
@@ -59,7 +57,7 @@ import { Wallet } from "ethers";
 
 const options = {
   network: "perseverance", // Testnet
-  broker: { url: 'https://my.broker.io' },
+  broker: { url: "https://my.broker.io" },
 };
 
 const swapSDK = new SwapSDK(options);
@@ -67,24 +65,24 @@ const swapSDK = new SwapSDK(options);
 
 The `options` object accepts the following properties:
 
-| Param | Description | Data type |
-| :---- | :---------- | :-------- |
-| `network`(optional) | The [Chainflip network](/protocol/supported-chains-assets/chains-assets#chainflip-networks) to interact with. Defaults to `perseverance`. | `'sisyphos' \| 'perseverance' \| 'mainnet'` |
-| `backendServiceUrl`(optional) | The URL of the [backend service](https://github.com/chainflip-io/chainflip-sdk-monorepo/tree/main/packages/swap). Defaults to the backend service run by Chainflip for the given network. | `string` |
-| `broker`(optional) | The URL of the [Broker API](/brokers/running-broker-api) used for initiating swaps. Defaults to the Broker API run by Chainflip for the given network. | `` `{ url: string }` `` |
-| `rpcUrl`(optional) | The URL of the [Chainflip RPC node](/protocol/running-an-rpc-node). Defaults to the public rpc node operated by Chainflip for the given network. | `String` |
-| `enabledFeatures`(optional) | Features that must be explicitly opted into. | `` `{ dca?: boolean }` `` |
+| Param                         | Description                                                                                                                                                                               |                  Data type                  |
+| :---------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-----------------------------------------: |
+| `network`(optional)           | The [Chainflip network](/protocol/supported-chains-assets/chains-assets#chainflip-networks) to interact with. Defaults to `perseverance`.                                                 | `'sisyphos' \| 'perseverance' \| 'mainnet'` |
+| `backendServiceUrl`(optional) | The URL of the [backend service](https://github.com/chainflip-io/chainflip-sdk-monorepo/tree/main/packages/swap). Defaults to the backend service run by Chainflip for the given network. |                  `string`                   |
+| `broker`(optional)            | The URL of the [Broker API](/brokers/running-broker-api) used for initiating swaps. Defaults to the Broker API run by Chainflip for the given network.                                    |           `` `{ url: string }` ``           |
+| `rpcUrl`(optional)            | The URL of the [Chainflip RPC node](/protocol/running-an-rpc-node). Defaults to the public rpc node operated by Chainflip for the given network.                                          |                  `String`                   |
+| `enabledFeatures`(optional)   | Features that must be explicitly opted into.                                                                                                                                              |          `` `{ dca?: boolean }` ``          |
 
 ## Working Examples
 
 ### Swap ETH to BTC via deposit channel
 
 ```typescript copy
-import { SwapSDK, Chains, Assets } from '@chainflip/sdk/swap';
+import { SwapSDK, Chains, Assets } from "@chainflip/sdk/swap";
 
 // Initialize SDK
 const swapSDK = new SwapSDK({
-  network: 'perseverance',
+  network: "perseverance",
   enabledFeatures: { dca: true },
 });
 
@@ -98,41 +96,45 @@ const { quotes } = await swapSDK.getQuoteV2({
 });
 
 // Find regular quote
-const quote = quotes.find((quote) => quote.type === 'REGULAR');
-console.log('quote', quote);
+const quote = quotes.find((quote) => quote.type === "REGULAR");
+console.log("quote", quote);
 
 // Request deposit address for swap
 const depositAddress = await swapSDK.requestDepositAddressV2({
   quote,
-  destAddress: 'tb1p8p3xsgaeltylmvyrskt3mup5x7lznyrh7vu2jvvk7mn8mhm6clksl5k0sm',
+  destAddress: "tb1p8p3xsgaeltylmvyrskt3mup5x7lznyrh7vu2jvvk7mn8mhm6clksl5k0sm",
   fillOrKillParams: {
-    refundAddress: '0xa56A6be23b6Cf39D9448FF6e897C29c41c8fbDFF', // address to which assets are refunded
+    refundAddress: "0xa56A6be23b6Cf39D9448FF6e897C29c41c8fbDFF", // address to which assets are refunded
     retryDurationBlocks: 100, // 100 blocks * 6 seconds = 10 minutes before deposits are refunded
     slippageTolerancePercent: quote.recommendedSlippageTolerancePercent, // use recommended slippage tolerance from quote
-    livePriceSlippageTolerancePercent: quote.recommendedLivePriceSlippageTolerancePercent, // use recommended live price slippage tolerance from quote
+    livePriceSlippageTolerancePercent:
+      quote.recommendedLivePriceSlippageTolerancePercent, // use recommended live price slippage tolerance from quote
   },
 });
-console.log('depositAddress', depositAddress);
+console.log("depositAddress", depositAddress);
 
 // Fetch swap status
 const status = await swapSDK.getStatusV2({
   id: depositAddress.depositChannelId,
 });
-console.log('status', status);
+console.log("status", status);
 ```
 
 ### Swap ETH to BTC via Vault swap
 
 ```typescript copy
-import { SwapSDK, Chains, Assets } from '@chainflip/sdk/swap';
-import { getDefaultProvider, Wallet } from 'ethers';
+import { SwapSDK, Chains, Assets } from "@chainflip/sdk/swap";
+import { getDefaultProvider, Wallet } from "ethers";
 
 // Initialize SDK and Wallet
 const swapSDK = new SwapSDK({
-  network: 'perseverance',
+  network: "perseverance",
   enabledFeatures: { dca: true },
 });
-const wallet = new Wallet(process.env.SECRET_KEY, getDefaultProvider('sepolia'));
+const wallet = new Wallet(
+  process.env.SECRET_KEY,
+  getDefaultProvider("sepolia")
+);
 
 // Fetch quote for swap
 const { quotes } = await swapSDK.getQuoteV2({
@@ -145,22 +147,23 @@ const { quotes } = await swapSDK.getQuoteV2({
 });
 
 // Find regular quote
-const quote = quotes.find((quote) => quote.type === 'REGULAR');
-console.log('quote', quote);
+const quote = quotes.find((quote) => quote.type === "REGULAR");
+console.log("quote", quote);
 
 // Encode vault swap transaction data
 const transactionData = await swapSDK.encodeVaultSwapData({
   quote,
   srcAddress: wallet.address,
-  destAddress: 'bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq',
+  destAddress: "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq",
   fillOrKillParams: {
     refundAddress: wallet.address,
     retryDurationBlocks: 100,
     slippageTolerancePercent: quote.recommendedSlippageTolerancePercent,
-    livePriceSlippageTolerancePercent: quote.recommendedLivePriceSlippageTolerancePercent,
+    livePriceSlippageTolerancePercent:
+      quote.recommendedLivePriceSlippageTolerancePercent,
   },
 });
-console.log('transactionData', transactionData);
+console.log("transactionData", transactionData);
 
 // Sign and submit swap transaction
 const transaction = await wallet.sendTransaction({
@@ -169,23 +172,23 @@ const transaction = await wallet.sendTransaction({
   value: transactionData.value,
 });
 const receipt = await transaction.wait(); // wait for transaction to be included in a block
-console.log('receipt', receipt);
+console.log("receipt", receipt);
 
 // Fetch swap status
 const status = await swapSDK.getStatusV2({
   id: receipt.hash,
 });
-console.log('status', status);
+console.log("status", status);
 ```
 
 ### Swap BTC to ETH with Cross-Chain Message
 
 ```typescript copy
-import { SwapSDK, Chains, Assets } from '@chainflip/sdk/swap';
+import { SwapSDK, Chains, Assets } from "@chainflip/sdk/swap";
 
 // Initialize SDK
 const swapSDK = new SwapSDK({
-  network: 'perseverance',
+  network: "perseverance",
   enabledFeatures: { dca: true },
 });
 
@@ -205,33 +208,34 @@ const { quotes } = await swapSDK.getQuoteV2({
 });
 
 // Find dca quote
-const quote = quotes.find((quote) => quote.type === 'DCA');
-console.log('quote', quote);
+const quote = quotes.find((quote) => quote.type === "DCA");
+console.log("quote", quote);
 
 // Request deposit address for swap
 const depositAddress = await swapSDK.requestDepositAddressV2({
   quote,
-  destAddress: '0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754',
+  destAddress: "0xFcd3C82b154CB4717Ac98718D0Fd13EEBA3D2754",
   fillOrKillParams: {
-    refundAddress: 'tb1p8p3xsgaeltylmvyrskt3mup5x7lznyrh7vu2jvvk7mn8mhm6clksl5k0sm',
+    refundAddress:
+      "tb1p8p3xsgaeltylmvyrskt3mup5x7lznyrh7vu2jvvk7mn8mhm6clksl5k0sm",
     retryDurationBlocks: 100,
     slippageTolerancePercent: quote.recommendedSlippageTolerancePercent,
-    livePriceSlippageTolerancePercent: quote.recommendedLivePriceSlippageTolerancePercent,
+    livePriceSlippageTolerancePercent:
+      quote.recommendedLivePriceSlippageTolerancePercent,
   },
   ccmParams: {
-    message: '0xdeadc0de',
+    message: "0xdeadc0de",
     gasBudget: (125000).toString(),
   },
 });
-console.log('depositAddress', depositAddress);
+console.log("depositAddress", depositAddress);
 
 // Fetch swap status
 const status = await swapSDK.getStatusV2({
   id: depositAddress.depositChannelId,
 });
-console.log('status', status);
+console.log("status", status);
 ```
-
 
 ## Support
 
