--- a/app/brokers/(3-techincal-docs)/broker-api/page.mdx
+++ b/app/brokers/(3-techincal-docs)/broker-api/page.mdx
@@ -1,30 +1,26 @@
 ---
-
 title: Broker API
 
 description: The Broker API rpc functions
-
 ---
 
-import { Cards, Callout } from 'nextra/components'
-
-
+import { Cards, Callout } from "nextra/components";
 
 ## Broker-API
 
 Here are the RPCs useful for brokers that are available on Broker-API binary.
 
 <Callout type="info">
-    The following RPCs are available on `chainflip-broker-api` binary
+  The following RPCs are available on `chainflip-broker-api` binary
 </Callout>
 
 ## Types
 
 <Cards>
-    <Cards.Card title="Assets" href="/brokers/broker-api/types#assets" />
-    <Cards.Card title="Chains" href="/brokers/broker-api/types#chains" />
-    <Cards.Card title="Addresses" href="/brokers/broker-api/types#addresses" />
-    <Cards.Card title="Price" href="/brokers/broker-api/types#price" />
+  <Cards.Card title="Assets" href="/brokers/broker-api/types#assets" />
+  <Cards.Card title="Chains" href="/brokers/broker-api/types#chains" />
+  <Cards.Card title="Addresses" href="/brokers/broker-api/types#addresses" />
+  <Cards.Card title="Price" href="/brokers/broker-api/types#price" />
 </Cards>
 
 ## Requests
@@ -43,11 +39,14 @@ Here are the RPCs useful for brokers that are available on Broker-API binary.
     <Cards.Card title="broker_register_affiliate" href="/brokers/broker-api/requests#broker_register_affiliate" />
     <Cards.Card title="broker_get_affiliates" href="/brokers/broker-api/requests#broker_get_affiliates" />
     <Cards.Card title="broker_affiliate_withdrawal_request" href="/brokers/broker-api/requests#broker_affiliate_withdrawal_request" />
-</Cards>
 
+</Cards>
 
 ## Subscriptions
 
 <Cards num={2}>
-    <Cards.Card title="broker_subscribe_transaction_screening_events" href="/brokers/broker-api/subscriptions#broker_subscribe_transaction_screening_events" />
+  <Cards.Card
+    title="broker_subscribe_transaction_screening_events"
+    href="/brokers/broker-api/subscriptions#broker_subscribe_transaction_screening_events"
+  />
 </Cards>
