--- a/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
+++ b/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
@@ -1,103 +1,36 @@
 ---
-
 title: Params
 
 description: All the params used in Chainflip JavaScript SDK
-
 ---
 
-import { Callout } from "nextra/components";
-
+import { Callout, Table } from "nextra/components";
 
 ## SDK Params
-
 
 ### `fillOrKillParams`
 
 The `fillOrKillParams` object sets two different types of slippage protection when initiating a swap.
-1. [**minimum accepted price**](/protocol/swapping-basics#slippage-protection)
-This protects the swapper against price changes between a quote and the execution of a swap by setting a minimum accepted price.
-If the minimum price cannot be met with the available liquidity during the specified number of blocks,
-deposited assets will be refunded to the specified refund address.
-2. [**live price protection**](/protocol/swapping-basics#slippage-protection)
-This protects the swapper from getting an execution price that significantly deviates from the global index price of the asset
-(as determined by an oracle) ensuring the LPs are offering competitive pricing. Similar to other slippage settings, the execution of the swap
-will be paused until an LP offers a price that is within the specified deviation or the swap deadline is reached - in which case the swap will be refunded.
-This setting is especially useful during longer DCA swaps where the price of the asset is moving in favor of the swapper.
-i.e the slippage tolerance will "follow" the global price of the asset. In case the price
-moves against the swapper, it will still execute as long as the execution price is above the minimum accepted price.
 
-{
-<table>
-    <thead>
-    <tr>
-        <th width="223">Param</th>
-        <th width="371">Description</th>
-        <th width="244.33333333333331">Data type</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>
-            <code>slippageTolerancePercent</code><span className="param-required-label">(required)</span>
-        </td>
-        <td>
-            The percent of slippage that is acceptable for the swap. The <code>estimatedPrice</code>
-            field from the <code>quote</code> is used to calculate the minimum price for the channel.
-            <span className="font-bold">This field must be left out when specifying a <code>minPrice</code>.</span>
-        </td>
-        <td><code>string</code></td>
-    </tr>
-    <tr>
-        <td>
-            <code>minPrice</code><span className="param-required-label">(required)</span>
-        </td>
-        <td>
-            Minimum accepted price for swaps triggered through the deposit channel.
-            <span className="font-bold">This field must be left out when specifying a <code>slippageTolerancePercent</code>.</span>
-        </td>
-        <td><code>string</code></td>
-    </tr>
-    <tr>
-        <td>
-            <code>livePriceSlippageTolerancePercent</code><span className="param-required-label">(required)</span>
-        </td>
-        <td>
-            The percentage of deviation from the global index price that is acceptable for the swap to execute. If the deviation is exceeded,
-            the swap will be refunded to the specified refund address.
-            If not set, the default value from the <code>quote</code> will be used. Set the value to <code>false</code> to disable live price protection.
-            If the quote does not have a recommended live price slippage tolerance, this setting is not available for the asset pair and should not be set.
-        </td>
-        <td>
-            <div className="flex flex-col items-center gap-y-2">
-                <code>string</code>
-                <code>false</code>
-                <code>undefined</code>
-            </div>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <code>refundAddress</code><span className="param-required-label">(required)</span>
-        </td>
-        <td>
-            Address on the source chain to which the refund will be sent, if the minimum price cannot be met.
-        </td>
-        <td><code>string</code></td>
-    </tr>
-    <tr>
-        <td>
-            <code>retryDurationBlocks</code><span className="param-required-label">(required)</span>
-        </td>
-        <td>
-            Number of State Chain blocks after which a deposit is refunded, if the minimum price cannot be met.
-            One State Chain block corresponds to 6 seconds.
-        </td>
-        <td><code>number</code></td>
-    </tr>
-    </tbody>
-</table>
-}
+1. [**minimum accepted price**](/protocol/swapping-basics#slippage-protection)
+   This protects the swapper against price changes between a quote and the execution of a swap by setting a minimum accepted price.
+   If the minimum price cannot be met with the available liquidity during the specified number of blocks,
+   deposited assets will be refunded to the specified refund address.
+2. [**live price protection**](/protocol/swapping-basics#slippage-protection)
+   This protects the swapper from getting an execution price that significantly deviates from the global index price of the asset
+   (as determined by an oracle) ensuring the LPs are offering competitive pricing. Similar to other slippage settings, the execution of the swap
+   will be paused until an LP offers a price that is within the specified deviation or the swap deadline is reached - in which case the swap will be refunded.
+   This setting is especially useful during longer DCA swaps where the price of the asset is moving in favor of the swapper.
+   i.e the slippage tolerance will "follow" the global price of the asset. In case the price
+   moves against the swapper, it will still execute as long as the execution price is above the minimum accepted price.
+
+| Param                                           | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                          |           Data type           |
+| :---------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------------------------: |
+| `slippageTolerancePercent`                      | The percent of slippage that is acceptable for the swap. The `estimatedPrice` field from the `quote` is used to calculate the minimum price for the channel. **This field must be left out when specifying a `minPrice`.**                                                                                                                                                                                                                                           |           `string`            |
+| `minPrice`                                      | Minimum accepted price for swaps triggered through the deposit channel. **This field must be left out when specifying a `slippageTolerancePercent`.**                                                                                                                                                                                                                                                                                                                |           `string`            |
+| `livePriceSlippageTolerancePercent` \(optional) | The percentage of deviation from the global index price that is acceptable for the swap to execute. If the deviation is exceeded, the swap will be refunded to the specified refund address. If not set, the default value from the `quote` will be used. Set the value to `false` to disable live price protection. If the quote does not have a recommended live price slippage tolerance, this setting is not available for the asset pair and should not be set. | `string` `false` `undefined ` |
+| `refundAddress`                                 | Address on the source chain to which the refund will be sent, if the minimum price cannot be met.                                                                                                                                                                                                                                                                                                                                                                    |           `string`            |
+| `retryDurationBlocks`                           | Number of State Chain blocks after which a deposit is refunded, if the minimum price cannot be met. One State Chain block corresponds to 6 seconds.                                                                                                                                                                                                                                                                                                                  |           `number`            |
 
 Slippage tolerance can be specified by using the `slippageTolerancePercent`
 property. `slippageTolerancePercent` must be a number between 0 and 100. This
@@ -105,8 +38,10 @@ percent is used together with the `estimatedPrice` of the quote to calculate a
 minimum accepted swap price:
 
 ```ts
-const minimumPrice = quote.estimatedPrice * (1 - Number(slippageTolerancePercent) / 100);
+const minimumPrice =
+  quote.estimatedPrice * (1 - Number(slippageTolerancePercent) / 100);
 ```
+
 Alternatively, you can manually provide a `minPrice` value. The minimum price is
 the ratio between the human readable destination amount and the human readable
 source amount, e.g. `3500` for a swap from ETH to USDC if you want to receive
@@ -124,21 +59,21 @@ transactions sent by the Chainflip protocol. The boost or deposit fee paid will 
 not be refunded.
 
 <Callout type="warning">
-    Slippage tolerance is applied relative to the
-    quoted price unlike live price slippage which is applied relative to the global index price.
-    Prices are checked on the AMM level and do not include deposit or broadcast fees.
+  Slippage tolerance is applied relative to the quoted price unlike live price
+  slippage which is applied relative to the global index price. Prices are
+  checked on the AMM level and do not include deposit or broadcast fees.
 </Callout>
-
 
 #### Example
 
 ```typescript copy
 const fillOrKillParams = {
-  refundAddress: '0xa56A6be23b6Cf39D9448FF6e897C29c41c8fbDFF', // address to which assets are refunded
+  refundAddress: "0xa56A6be23b6Cf39D9448FF6e897C29c41c8fbDFF", // address to which assets are refunded
   retryDurationBlocks: 100, // 100 blocks * 6 seconds = 10 minutes before deposits are refunded
   slippageTolerancePercent: quote.recommendedSlippageTolerancePercent, // use recommended slippage tolerance from quote
-  livePriceSlippageTolerancePercent: quote.recommendedLivePriceSlippageTolerancePercent, // use recommended live price slippage tolerance from quote
-}
+  livePriceSlippageTolerancePercent:
+    quote.recommendedLivePriceSlippageTolerancePercent, // use recommended live price slippage tolerance from quote
+};
 ```
 
 ### `ccmParams`
@@ -146,51 +81,11 @@ const fillOrKillParams = {
 The Cross-Chain Messaging optional `ccmParams` object enables to pass a [Cross-Chain Message](/protocol/cross-chain-messaging/overview)
 to a receiver contract/program on the destination chain.
 
-{
-<table>
-    <thead>
-    <tr>
-        <th width="223">Param</th>
-        <th width="371">Description</th>
-        <th width="244.33333333333331">Data type</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>
-            <code>message</code><span className="param-required-label">(required)</span>
-        </td>
-        <td>
-            Message (bytes) that is passed to the destination address on the destination
-            chain.
-
-            The message must be shorter than 15k bytes.
-        </td>
-        <td><code>string</code></td>
-    </tr>
-    <tr>
-        <td>
-            <code>gasBudget</code><span className="param-required-label">(required)</span>
-        </td>
-        <td>
-            Gas budget for the call on the destination chain. This amount is the amount of
-            gas or compute units required by the user logic on the destination chain.
-        </td>
-        <td><code>number</code></td>
-    </tr>
-    <tr>
-        <td>
-            <code>ccmAdditionalData</code><span className="param-optional-label">(optional)</span>
-        </td>
-        <td>
-            Additional bytes required for the CCM call on the destination chain.
-            This is required for Solana to pass the accounts that are required for the call.
-        </td>
-        <td><code>string</code></td>
-    </tr>
-    </tbody>
-</table>
-}
+| Param                          | Description                                                                                                                                              | Data type |
+| ------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------- | --------- |
+| `message` (required)           | Message (bytes) that is passed to the destination address on the destination chain.                                                                      | `string`  |
+| `gasBudget` (required)         | Gas budget for the call on the destination chain. This amount is the amount of gas or compute units required by the user logic on the destination chain. | `number`  |
+| `ccmAdditionalData` (optional) | Additional bytes required for the CCM call on the destination chain. This is required for Solana to pass the accounts that are required for the call.    | `string`  |
 
 #### Example
 
@@ -198,5 +93,5 @@ to a receiver contract/program on the destination chain.
 const ccmParams = {
   message: "0xdeadc0de",
   gasBudget: 250_000,
-}
+};
 ```
