--- a/app/brokers/(3-techincal-docs)/vault-swaps-api/bitcoin/page.mdx
+++ b/app/brokers/(3-techincal-docs)/vault-swaps-api/bitcoin/page.mdx
@@ -1,9 +1,7 @@
 ---
-
 title: Bitcoin Vault swaps
 
 description: Description of performing Vault Swaps for the Bitcoin network
-
 ---
 
 import { Callout } from "nextra/components";
@@ -13,7 +11,12 @@ import { Callout } from "nextra/components";
 Bitcoin Vault Swaps are a way of initiating a swap by constructing a custom Bitcoin transaction that is sent to the Chainflip Vault via a private broker channel. The transaction contains all of the instructions necessary to process the swap.
 
 <Callout type="info">
-Bitcoin Vault Swaps have a unique requirement compared to other chains: Brokers must first open a [Private Bitcoin Channel](/brokers/broker-api/requests#broker_open_private_btc_channel). Private channels prevent spam, and allow the Broker to uniquely assign commission to itself and its Affiliates. Opening a Private Channel is a **one-time** operation.
+  Bitcoin Vault Swaps have a unique requirement compared to other chains:
+  Brokers must first open a [Private Bitcoin
+  Channel](/brokers/broker-api/requests#broker_open_private_btc_channel).
+  Private channels prevent spam, and allow the Broker to uniquely assign
+  commission to itself and its Affiliates. Opening a Private Channel is a
+  **one-time** operation.
 </Callout>
 
 Creating a Bitcoin Vault Swap follows the same pattern mentioned in the [Vault Swaps introduction](/brokers/broker-vault-swaps):
@@ -24,7 +27,7 @@ Creating a Bitcoin Vault Swap follows the same pattern mentioned in the [Vault S
 
 <Callout type="warning">
 
-Vault swaps with CCM attached for the Bitcoin network is currently not supported, due to limited transaction length. 
+Vault swaps with CCM attached for the Bitcoin network is currently not supported, due to limited transaction length.
 
 To avoid confusion, calling the `broker_request_swap_parameter_encoding()` RPC with CCM attached for Bitcoin will result in an error.
 
@@ -78,16 +81,16 @@ Example Response:
 
 Note the return value from the above RPC call:
 
-| Field | Description |
-| ----- | ----------- |
-| `nulldata_payload` | Hex-encoded data to be inserted into a Bitcoin "NullData" (OP_RETURN) output. |
-| `deposit_address` | The Bitcoin address to which funds should be sent. This corresponds to the Broker's private channel address. |
+| Field              | Description                                                                                                  |
+| ------------------ | ------------------------------------------------------------------------------------------------------------ |
+| `nulldata_payload` | Hex-encoded data to be inserted into a Bitcoin "NullData" (OP_RETURN) output.                                |
+| `deposit_address`  | The Bitcoin address to which funds should be sent. This corresponds to the Broker's private channel address. |
 
-These must be included in a Bitcoin transaction containing, as its first three outputs, *exactly* the following UTXOs, in this order:
+These must be included in a Bitcoin transaction containing, as its first three outputs, _exactly_ the following UTXOs, in this order:
 
-1) A UTXO spending Bitcoin to the `deposit_address`.
-2) A NullData UTXO containing the `nulldata_payload` appended via Bitcoin's `OP_RETURN` opcode.
-3) A change UTXO: the output address of this will be assumed to be refund address.
+1. A UTXO spending Bitcoin to the `deposit_address`.
+2. A NullData UTXO containing the `nulldata_payload` appended via Bitcoin's `OP_RETURN` opcode.
+3. A change UTXO: the output address of this will be assumed to be refund address.
 
 For example, using Typescript and `bitcoin-core`:
 
@@ -97,12 +100,15 @@ Assume `nulldataPayload` and `depositAddress`;
 Assume a swap amount of 1 BTC (10,000,000 Satoshis);
 */
 // 1. Create a new raw transaction
-const rawTx = await btcClient.createRawTransaction([], [
-  // First output: Spending 1 BTC to the depositAddress.
-  { [depositAddress]: 100_000_000 },
-  // Second output: append data using OP_RETURN.
-  { data: nulldataPayload.replace('0x', '') },
-]);
+const rawTx = await btcClient.createRawTransaction(
+  [],
+  [
+    // First output: Spending 1 BTC to the depositAddress.
+    { [depositAddress]: 100_000_000 },
+    // Second output: append data using OP_RETURN.
+    { data: nulldataPayload.replace("0x", "") },
+  ]
+);
 // 2. Fund the transaction from the Client's wallet, specifying a change address.
 const fundedTx = (await btcClient.fundRawTransaction(rawTx, {
   changeAddress,
@@ -115,7 +121,7 @@ const fundedTx = (await btcClient.fundRawTransaction(rawTx, {
 
 The `changeAddress`, which is included in the change UTXO as the third output, is mandatory because the Chainflip protocol needs a refund address in case the swap is refunded.
 
-Per the Bitcoin protocol, the change UTXO amount *cannot* be zero and must be larger than Bitcoin's dust threshold for the change address type. Therefore it is not possible to swap the entire amount of the input UTXOs, a dust amount needs to be sent to the change address.
+Per the Bitcoin protocol, the change UTXO amount _cannot_ be zero and must be larger than Bitcoin's dust threshold for the change address type. Therefore it is not possible to swap the entire amount of the input UTXOs, a dust amount needs to be sent to the change address.
 
 </Callout>
 
@@ -127,15 +133,21 @@ Again, using Typescript and `bitcoin-core`, continuing from above:
 
 ```typescript copy
 const signedTx = await btcClient.signRawTransactionWithWallet(fundedTx.hex);
-const txId = (await btcClient.sendRawTransaction(signedTx.hex)) as string | undefined;
+const txId = (await btcClient.sendRawTransaction(signedTx.hex)) as
+  | string
+  | undefined;
 
 if (!txId) {
-  throw new Error('Broadcast failed');
+  throw new Error("Broadcast failed");
 }
 ```
 
 <Callout type="warning">
-Note that, unlike other chains, Bitcoin Vault Swaps *expire* after two Epoch rotations. At the time of writing, this takes between 3 and 6 days. Nonetheless, it is recommended that Vault Swap payloads are assumed to be ephemeral unless you know what you are doing and are willing to take the risk of losing funds if an expired transaction is submitted.
+  Note that, unlike other chains, Bitcoin Vault Swaps *expire* after two Epoch
+  rotations. At the time of writing, this takes between 3 and 6 days.
+  Nonetheless, it is recommended that Vault Swap payloads are assumed to be
+  ephemeral unless you know what you are doing and are willing to take the risk
+  of losing funds if an expired transaction is submitted.
 </Callout>
 
 ## Full Example
@@ -143,21 +155,21 @@ Note that, unlike other chains, Bitcoin Vault Swaps *expire* after two Epoch rot
 This is a basic Typescript example combining the above steps.
 
 ```typescript copy
-import Client from 'bitcoin-core';
+import Client from "bitcoin-core";
 
 const btcClient = new Client({
-  host: 'your_btc_endpoint',
+  host: "your_btc_endpoint",
   port: 1234,
-  username: 'your_username',
-  password: 'your_password',
-  wallet: 'your_wallet',
+  username: "your_username",
+  password: "your_password",
+  wallet: "your_wallet",
 });
 
 // Get encoded swap details
-const response = await fetch('http://my-broker-api:9944', {
-  method: 'POST',
+const response = await fetch("http://my-broker-api:9944", {
+  method: "POST",
   headers: {
-    'content-type': 'application/json;charset=UTF-8',
+    "content-type": "application/json;charset=UTF-8",
   },
   body: JSON.stringify({
     id: 1,
@@ -171,41 +183,46 @@ const response = await fetch('http://my-broker-api:9944', {
       extra_parameters: {
         chain: "Bitcoin",
         min_output_amount: 10000000000,
-        retry_duration: 10
+        retry_duration: 10,
       },
       boost_fee: 5,
       dca_parameters: {
         number_of_chunks: 4,
-        chunk_interval: 10
-      }
-    }
-  })
+        chunk_interval: 10,
+      },
+    },
+  }),
 });
 
-const encodedVaultSwapDetails = await response.json() as {
+const encodedVaultSwapDetails = (await response.json()) as {
   nulldata_payload: string;
   deposit_address: string;
 };
 
 // Create, fund, sign and broadcast the transaction
-const rawTx = await btcClient.createRawTransaction([], [
-  {
-    [encodedVaultSwapDetails.deposit_address]: 10000000,
-  },
-  {
-    data: encodedVaultSwapDetails.nulldata_payload.replace('0x', ''),
-  },
-]);
+const rawTx = await btcClient.createRawTransaction(
+  [],
+  [
+    {
+      [encodedVaultSwapDetails.deposit_address]: 10000000,
+    },
+    {
+      data: encodedVaultSwapDetails.nulldata_payload.replace("0x", ""),
+    },
+  ]
+);
 const fundedTx = (await btcClient.fundRawTransaction(rawTx, {
   changeAddress,
   changePosition: 2,
   // .. possibly other options (see the bitcoin-core reference)
 })) as { hex: string };
 const signedTx = await btcClient.signRawTransactionWithWallet(fundedTx.hex);
-const txId = (await btcClient.sendRawTransaction(signedTx.hex)) as string | undefined;
+const txId = (await btcClient.sendRawTransaction(signedTx.hex)) as
+  | string
+  | undefined;
 
 if (!txId) {
-  throw new Error('Broadcast failed');
+  throw new Error("Broadcast failed");
 }
 ```
 
@@ -214,13 +231,15 @@ if (!txId) {
 This reference can be used to verify the encoding of the NullData Payload if desired.
 
 <Callout type="warning">
-You should not need to build this encoding yourself. Always prefer to use the [`broker_request_swap_parameter_encoding()` RPC](/brokers/broker-vault-swaps) to encode the swap parameters. It's more convenient and more reliable.
+  You should not need to build this encoding yourself. Always prefer to use the
+  [`broker_request_swap_parameter_encoding()` RPC](/brokers/broker-vault-swaps)
+  to encode the swap parameters. It's more convenient and more reliable.
 </Callout>
 
 The swap parameters are encoded in the `nulldata UTXO` payload using [Parity's SCALE](https://docs.polkadot.com/polkadot-protocol/basics/data-encoding/#scale-codec) codec, in the following order:
 
 | Param                       | Description                                                                                                          | Data Type       |
-|-----------------------------|----------------------------------------------------------------------------------------------------------------------|-----------------|
+| --------------------------- | -------------------------------------------------------------------------------------------------------------------- | --------------- |
 | `version`                   | Encoding version number. Currently `1`                                                                               | `u8`            |
 | `output_asset`              | Destination [asset ID](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation).              | `u8`            |
 | `output_address`            | Encoded [address](/brokers/broker-api/types#addresses)                                                               | `Vec<u8>`       |
@@ -234,6 +253,9 @@ The swap parameters are encoded in the `nulldata UTXO` payload using [Parity's S
 | `affiliates`                | List of up to 2 [affiliate short IDs](/brokers/broker-api/requests#broker_register_affiliate) and fee (basis points) | `Vec<(u8, u8)>` |
 
 <Callout type="info">
-The encoded data in `nulldata_payload` returned by [broker_request_swap_parameter_encoding](/brokers/broker-api/requests#broker_request_swap_parameter_encoding) does not include any OP codes. Depending on how you build your transaction, you may need to add these manually.
-First opcode must be `OP_RETURN` followed by either `OP_PUSHBYTES_X` (1..=75) or `OP_PUSHDATA1` (76).
+  The encoded data in `nulldata_payload` returned by
+  [broker_request_swap_parameter_encoding](/brokers/broker-api/requests#broker_request_swap_parameter_encoding)
+  does not include any OP codes. Depending on how you build your transaction,
+  you may need to add these manually. First opcode must be `OP_RETURN` followed
+  by either `OP_PUSHBYTES_X` (1..=75) or `OP_PUSHDATA1` (76).
 </Callout>
