--- a/app/brokers/(3-techincal-docs)/vault-swaps-api/solana/page.mdx
+++ b/app/brokers/(3-techincal-docs)/vault-swaps-api/solana/page.mdx
@@ -1,9 +1,7 @@
 ---
-
 title: Vault swaps for Solana
 
 description: Description of performing Vault Swaps for the Solana network
-
 ---
 
 import { Callout } from "nextra/components";
@@ -27,7 +25,6 @@ The user will need to pay a very small fees to create the account, also known as
 When creating the account two seeds are used - the user address and an arbitrary seed provided by the user. This arbitrary seed is to allow the same user to make multiple Vault Swaps without colliding with previous swaps before those accounts are closed.
 
 There is no security risk if that value is predictable (e.g. increasing counter) or even if two users were to use the same value. It is recommended to just use a random seed generated on the fly for each swap. The seed must be a hex string of up to 32 bytes.
-
 
 ## Swap Parameter Encoding via Broker API
 
@@ -125,7 +122,7 @@ import {
   TransactionInstruction,
   Transaction,
   AccountMeta,
-} from '@solana/web3.js';
+} from "@solana/web3.js";
 
 // Submit the encoding request to the Broker API.
 const response = await fetch("http://my-broker-api:9944", {
@@ -138,26 +135,26 @@ const response = await fetch("http://my-broker-api:9944", {
     jsonrpc: "2.0",
     method: "broker_request_swap_parameter_encoding",
     params: {
-        source_asset: { "chain": "Solana", "asset": "SOL" },
-        destination_asset: { "chain": "Ethereum", "asset": "ETH" },
-        destination_address: "0xc64722AD9613851b10E26fF8118A7696A0f956f2",
-        broker_commission: 0,
-        extra_parameters: {
-            chain: "Solana",
-            from: "BdyHK5DckpAFGcbZveGLPjjMEaADGfNeqcRXKoyd33kA",
-            seed: "0x1234",
-            input_amount: 1000000000,
-            refund_parameters: {
-                "retry_duration": 10,
-                "refund_address": "BdyHK5DckpAFGcbZveGLPjjMEaADGfNeqcRXKoyd33kA",
-                "min_price": "0x0"
-            }
-        }
+      source_asset: { chain: "Solana", asset: "SOL" },
+      destination_asset: { chain: "Ethereum", asset: "ETH" },
+      destination_address: "0xc64722AD9613851b10E26fF8118A7696A0f956f2",
+      broker_commission: 0,
+      extra_parameters: {
+        chain: "Solana",
+        from: "BdyHK5DckpAFGcbZveGLPjjMEaADGfNeqcRXKoyd33kA",
+        seed: "0x1234",
+        input_amount: 1000000000,
+        refund_parameters: {
+          retry_duration: 10,
+          refund_address: "BdyHK5DckpAFGcbZveGLPjjMEaADGfNeqcRXKoyd33kA",
+          min_price: "0x0",
+        },
+      },
     },
   }),
 });
 
-const vaultSwapDetails = await response.json() as {
+const vaultSwapDetails = (await response.json()) as {
   chain: string;
   program_id: string;
   accounts: {
@@ -181,7 +178,7 @@ for (const account of vaultSwapDetails.accounts) {
 const instruction = new TransactionInstruction({
   keys,
   programId: new PublicKey(vaultSwapDetails.program_id),
-  data: Buffer.from(vaultSwapDetails.data.slice(2), 'hex'),
+  data: Buffer.from(vaultSwapDetails.data.slice(2), "hex"),
 });
 
 const transaction = new Transaction().add(instruction);
@@ -192,11 +189,7 @@ const transaction = new Transaction().add(instruction);
 The simplest way to sign, send and wait for confirmation for the transaction created previously in a single step is the following:
 
 ```typescript copy
-await sendAndConfirmTransaction(
-  connection,
-  transaction,
-  [userKeypair]
-);
+await sendAndConfirmTransaction(connection, transaction, [userKeypair]);
 ```
 
 ## Interface References
@@ -209,7 +202,7 @@ The IDL can be used to make program calls to the SwapEndpoint program on Solana.
 
 These dynamic values can be read from either the State Chain or Solana itself, since they are all stored on-chain. For easier integration the Broker API can be used to get the instruction to call the SwapEndpoint program. That will return the correct encoded data so the only step left is to send and sign the transaction.
 
-``` rust copy
+```rust copy
 pub struct CcmParams {
     pub message: Vec<u8>,
     pub gas_amount: u64,
@@ -248,7 +241,6 @@ pub fn x_swap_token(
 ) -> Result<()>;
 
 ```
-
 
 <Callout type="warning">
 Chainflip's program does some checks but it cannot check that all the parameters are valid and correctly encoded.
@@ -291,9 +283,9 @@ const tx = cfSwapEndpointProgram.methods
         ccmParameters: {
           message: Buffer.from("0x1234", "hex"),
           gasAmount: new anchor.BN(100000)
-        }, 
+        },
         cfParameters: Buffer.from("0x", "hex"),
-      }, 
+      },
       eventAccountSeed,
     )
     .accountsPartial({
@@ -344,7 +336,7 @@ const tx = await cfSwapEndpointProgram.methods
       ccmParameters: {
         message: Buffer.from("0x1234", "hex"),
         gasAmount: new anchor.BN(100000)
-      }, 
+      },
       cfParameters: Buffer.from("0x", "hex"),
       decimals: 6,
     },
@@ -370,29 +362,28 @@ const txHash = await sendAndConfirmTransaction(connection, tx, [userKeypair]);
 
 ### Parameter reference
 
-| Param | Description | Data Type |
-|-------|-------------|-----------|
-| `amount` | Amount of the source token to be swapped | `u64` |
-| `dstChain` | Destination [chain ID](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation) | `u32` |
-| `dstAddress` | Address where the swapped tokens will be sent to on the destination chain. Addresses must be encoded into a bytes type valid for the destination chain. You can check out a reference on how to do address encoding for each of the chains from our [SDK](https://github.com/chainflip-io/chainflip-sdk-monorepo/blob/67d43db80d734a206dd2a0cc8334cb118c711906/packages/shared/src/vault/executeSwap.ts#L31). | `Vec<u8>` |
-| `dstToken` | Destination [token](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation).| `u32` |
-| `ccmParameters` | Additional metadata for swaps with Cross-Chain Messaging. Should be set to `None` for simple swaps. See [CCM support](/protocol/cross-chain-messaging/sol-ccm) for more details. | `Option<(message, gasAmount)>` |
-| `message` |  Message that is passed to the destination address on the destination chain. It must be shorter than 15k bytes. | `Vec<u8>` |
-| `gasAmount` | Gas budget for the call on the destination chain in gas units or compute units. This amount should cover the execution of the receiver's logic. | `u64` |
-| `cfParameters`| Additional metadata for additional features. It cannot be empty and must be correctly encoded according to [Chainflip Parameters](/brokers/vault-swaps-api/encoding-reference#chainflip-parameters-cf_parameters). | `Vec<u8>` |
-| `seed` | Seed used to derive the `eventDataAccount`. The maximum valid length is 32-bytes | `Vec<u8>` |
-
+| Param           | Description                                                                                                                                                                                                                                                                                                                                                                                                   | Data Type                      |
+| --------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------ |
+| `amount`        | Amount of the source token to be swapped                                                                                                                                                                                                                                                                                                                                                                      | `u64`                          |
+| `dstChain`      | Destination [chain ID](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation)                                                                                                                                                                                                                                                                                                        | `u32`                          |
+| `dstAddress`    | Address where the swapped tokens will be sent to on the destination chain. Addresses must be encoded into a bytes type valid for the destination chain. You can check out a reference on how to do address encoding for each of the chains from our [SDK](https://github.com/chainflip-io/chainflip-sdk-monorepo/blob/67d43db80d734a206dd2a0cc8334cb118c711906/packages/shared/src/vault/executeSwap.ts#L31). | `Vec<u8>`                      |
+| `dstToken`      | Destination [token](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation).                                                                                                                                                                                                                                                                                                          | `u32`                          |
+| `ccmParameters` | Additional metadata for swaps with Cross-Chain Messaging. Should be set to `None` for simple swaps. See [CCM support](/protocol/cross-chain-messaging/sol-ccm) for more details.                                                                                                                                                                                                                              | `Option<(message, gasAmount)>` |
+| `message`       | Message that is passed to the destination address on the destination chain. It must be shorter than 15k bytes.                                                                                                                                                                                                                                                                                                | `Vec<u8>`                      |
+| `gasAmount`     | Gas budget for the call on the destination chain in gas units or compute units. This amount should cover the execution of the receiver's logic.                                                                                                                                                                                                                                                               | `u64`                          |
+| `cfParameters`  | Additional metadata for additional features. It cannot be empty and must be correctly encoded according to [Chainflip Parameters](/brokers/vault-swaps-api/encoding-reference#chainflip-parameters-cf_parameters).                                                                                                                                                                                            | `Vec<u8>`                      |
+| `seed`          | Seed used to derive the `eventDataAccount`. The maximum valid length is 32-bytes                                                                                                                                                                                                                                                                                                                              | `Vec<u8>`                      |
 
 ### Accounts Reference
 
-| Account | Description| Account type|
-|---------|------------|-------------|
-| `dataAccount` | Chainflip's Vault Data Account. See  [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses). | Data Account |
-| `nativeVault` | Swap Endpoint Native Vault. Can be derived from the Vault account. | Account |
-| `from` | Address initiating the swap. This account will pay the transaction fees and the input swap amount. | Signer |
-| `eventDataAccount` | Account PDA where the swap data is to be stored. It is derived in part from the seed parameter | Account| 
-| `swapEndpointDataAccount` | Chainflip's Swap Endpoint Data Account. See [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses). | Data Account |
-| `systemProgram` | Solana System Program Account | Account |
-| `fromTokenAccount` | Token account where the tokens should be transferred from. Normally this is the "from"'s associated token account. This is only needed when swapping tokens. | Signer |
-| `tokenSupportedAccount` | Chainflip's Token Supported Account for the specific token. This is only needed when swapping tokens. Mainnet addresses can be found [here]( [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses)). | Data Account |
-| `mint` | Address of the SPL-token to swap. The token should be supported by Chainflip, otherwise the transaction will revert. Mainnet addresses can be found [here]( [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses)). | Data Account |
+| Account                   | Description                                                                                                                                                                                                                            | Account type |
+| ------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------ |
+| `dataAccount`             | Chainflip's Vault Data Account. See [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses).                                                                                                                          | Data Account |
+| `nativeVault`             | Swap Endpoint Native Vault. Can be derived from the Vault account.                                                                                                                                                                     | Account      |
+| `from`                    | Address initiating the swap. This account will pay the transaction fees and the input swap amount.                                                                                                                                     | Signer       |
+| `eventDataAccount`        | Account PDA where the swap data is to be stored. It is derived in part from the seed parameter                                                                                                                                         | Account      |
+| `swapEndpointDataAccount` | Chainflip's Swap Endpoint Data Account. See [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses).                                                                                                                  | Data Account |
+| `systemProgram`           | Solana System Program Account                                                                                                                                                                                                          | Account      |
+| `fromTokenAccount`        | Token account where the tokens should be transferred from. Normally this is the "from"'s associated token account. This is only needed when swapping tokens.                                                                           | Signer       |
+| `tokenSupportedAccount`   | Chainflip's Token Supported Account for the specific token. This is only needed when swapping tokens. Mainnet addresses can be found [here]( [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses)).                | Data Account |
+| `mint`                    | Address of the SPL-token to swap. The token should be supported by Chainflip, otherwise the transaction will revert. Mainnet addresses can be found [here]( [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses)). | Data Account |
