--- a/app/protocol/(2-guides)/how-swapping-works/page.mdx
+++ b/app/protocol/(2-guides)/how-swapping-works/page.mdx
@@ -1,9 +1,7 @@
 ---
-
 title: How Swapping Works?
 
 description: Chainflip swaps are fire-and-forget, meaning once the deposit is made, the user doesn't need to do anything for the swap to take place.
-
 ---
 
 import { Callout } from "nextra/components";
@@ -80,47 +78,9 @@ The user now has their shiny new native assets sitting peacefully in their walle
 
 ### Swap Fees In Summary
 
-{<table>
-
-  <thead>
-    <tr>
-      <th width="194.33333333333331">Fee Type</th>
-      <th width="171">Fee Level</th>
-      <th>Description</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Deposit Gas Fees (Normal User Transfer)</td>
-      <td>
-        Varies per chain and deposit type, but usually 31k gas on Ethereum
-      </td>
-      <td>
-        Network gas fees will vary depending on the incoming chain. Coming from
-        BTC will differ from those coming from ETH for example. These will be
-        paid by the swapper when they deposit from their wallet.
-      </td>
-    </tr>
-    <tr>
-      <td>Liquidity Fee Per Pool</td>
-      <td>0.10% - 0.15%</td>
-      <td>Fixed Liquidity Provider Fee (Pool Defined)</td>
-    </tr>
-    <tr>
-      <td>Network Fee for Buy/Burn Mechanism</td>
-      <td>0.10% - 0.125%</td>
-      <td>
-        Fixed Network Fee used by the protocol to buy FLIP tokens from the
-        USDC-FLIP pool on the State Chain, which in turn are burnt. This includes 0.1% base network fee plus 0.025% from the Boost fee contributions.
-      </td>
-    </tr>
-    <tr>
-      <td>Destination Chain Transfer Broadcast Fee (Transfer by Protocol)</td>
-      <td>Varies per chain</td>
-      <td>
-        Network gas fees will vary depending on the withdrawal chain. Batching,
-        however, will lower the fee that would normally be paid.
-      </td>
-    </tr>
-  </tbody>
-</table>}
+| Fee Type                                                        | Fee Level                                                          | Description                                                                                                                                                                                                      |
+| :-------------------------------------------------------------- | :----------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Deposit Gas Fees (Normal User Transfer)                         | Varies per chain and deposit type, but usually 31k gas on Ethereum | Network gas fees will vary depending on the incoming chain. Coming from BTC will differ from those coming from ETH for example. These will be paid by the swapper when they deposit from their wallet.           |
+| Liquidity Fee Per Pool                                          | 0.10% - 0.15%                                                      | Fixed Liquidity Provider Fee (Pool Defined)                                                                                                                                                                      |
+| Network Fee for Buy/Burn Mechanism                              | 0.10% - 0.125%                                                     | Fixed Network Fee used by the protocol to buy FLIP tokens from the USDC-FLIP pool on the State Chain, which in turn are burnt. This includes 0.1% base network fee plus 0.025% from the Boost fee contributions. |
+| Destination Chain Transfer Broadcast Fee (Transfer by Protocol) | Varies per chain                                                   | Network gas fees will vary depending on the withdrawal chain. Batching, however, will lower the fee that would normally be paid.                                                                                 |
