--- a/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
+++ b/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
@@ -53,9 +53,8 @@ value from the quote but can be overridden or set to `false` to disable live pri
 If the quote does not have a recommended live price slippage tolerance, this setting is not
 available for the asset pair and should not be set. Note: if overriding the default value -
 This tolerance should cover network fees and broker fees. For example, if the network fee
-is 10bps and the broker fee is 15bps - the live price slippage tolerance should be set to at
-least 25bps to avoid refunds. The recommended value returned from the quote
-takes these fees into account.
+is 0.1% and the broker fee is 1.5% - the live price slippage tolerance should be set to at
+least 0.25% to avoid refunds. The recommended value returned from the quote takes these fees into account.
 
 If either of the slippage tolerance properties are invalidated, the swap will be refunded to
 the specified refund address. Refunds are subject to a broadcast fee on the source chain to pay for the
