validator funding fixes

--- a/app/validators/(1-concepts)/validator-auctions-bonds-and-rewards/page.mdx
+++ b/app/validators/(1-concepts)/validator-auctions-bonds-and-rewards/page.mdx
@@ -20,7 +20,7 @@ At any given time the Chainflip network consists of up to 150 Validator nodes th
 
 Authorities are responsible for authoring new blocks, participating in threshold signature ceremonies, and witnessing external events such as deposits to the vaults. In exchange, the authorities earn rewards in the form of FLIP token emissions.
 
-Authority slots are granted based on the outcomes of regular [Auctions](https://auction.chainflip.io). The highest bidders in the auction are selected to participate in cryptographic ceremonies to generate new shared keys. Upon success, the new vaults are activated and the countdown to the next aucton begins anew.
+Authority slots are granted based on the outcomes of regular [Auctions](https://auctions.chainflip.io/auction). The highest bidders in the auction are selected to participate in cryptographic ceremonies to generate new shared keys. Upon success, the new vaults are activated and the countdown to the next aucton begins anew.
 
 Each such period between auctions is known as an Epoch. At the time of writing, each Epoch lasts three days.
 
