--- a/app/validators/(2-guides)/mainnet/funding/page.mdx
+++ b/app/validators/(2-guides)/mainnet/funding/page.mdx
@@ -10,19 +10,18 @@ import { Callout } from "nextra/components";
 ## Funding & Bidding
 
 Before your Validator is considered for the active set, you must fund your account with the necessary amount of `$FLIP`, register it as a validator then signal to the chain that you want to start bidding.
-To fund your validator, head to the [auctions](https://auctions.chainflip.io/) app.
+To fund your validator, head to the [Auctions](https://auctions.chainflip.io/operators) app and connect your Ethereum wallet with ERC-20 `$FLIP` balance.
 
 ### Adding Funds to your Validator Node
 
-In order to fund your account, you should use the Auctions App. You could also interact with the Smart Contract directly, but since that's ugly we'll use the Dashboard for the purposes of this tutorial.
+In order to fund your account, you should use the [Auctions](https://auctions.chainflip.io/operators) App. You could also interact with the Smart Contract directly, but since that's ugly we'll use the Operators Dashboard for the purposes of this tutorial.
 
-1. Make sure you have `$FLIP` (ERC-20) in your EVM crypto wallet.
-2. Go to [Chainflip Auctions page](https://auctions.chainflip.io/) > "[**My Nodes**](https://auctions.chainflip.io/nodes)".
-3. Connect your crypto wallet containing the `$FLIP`.
-4. Click the button "**+ Add Node**" > You should see the "**Register new node**" dialog.
-5. Enter the Validator ID you got during [Generating Keys](/validators/mainnet/validator-setup#validator-keys) step — your `Public Key(SS58)`— and the amount of `$FLIP` you want to fund. Click on "**Add Funds**".
-6. Your crypto wallet will ask you to sign two transactions. The first one is a token approval and the second one transfers and add funds to your validator.
-7. Once you have successfully funded your account, jump back to your terminal and run the following:
+1. Make sure you have `$FLIP` (ERC-20) in your Ethereum wallet.
+2. Go to [Auctions](https://auctions.chainflip.io/operators) and connect your wallet. Go to "My Nodes (legacy)" tab.
+3. Click the button "**+ Add Node**". You should see the "**Register new node**" modal.
+4. Enter the Validator account ID you got during [Generating Keys](/validators/mainnet/validator-setup#validator-keys) step — your `Public Key(SS58)`— and the amount of `$FLIP` you want to fund. Click on "**Add Funds**".
+5. Your wallet will ask you to sign two transactions. The first one is a token approval and the second one transfers and add funds to your Validator.
+6. Once you have successfully funded your account, jump back to your terminal and run the following:
 
 ```bash copy
 sudo systemctl restart chainflip-engine
